# VoxKitchen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  LICENSE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  extras-ci.yml  publish.yml  release.yml
architecture/: index.html
architecture/multi-env/: index.html
concepts/data-protocol/: index.html
datasets/: index.html
datasets/aishell/: index.html
datasets/aishell2/: index.html
datasets/aishell3/: index.html
datasets/aishell4/: index.html
datasets/ami/: index.html
datasets/avspeech/: index.html
datasets/cnceleb/: index.html
datasets/commonvoice/: index.html
datasets/crema_d/: index.html
datasets/css10/: index.html
datasets/daps/: index.html
datasets/dipco/: index.html
datasets/earnings21/: index.html
datasets/earnings22/: index.html
datasets/emilia/: index.html
datasets/esd/: index.html
datasets/expresso/: index.html
datasets/fleurs/: index.html
datasets/gigaspeech/: index.html
datasets/gigaspeech2/: index.html
datasets/golos/: index.html
datasets/hifitts/: index.html
datasets/iemocap/: index.html
datasets/jsut/: index.html
datasets/kespeech/: index.html
datasets/ksponspeech/: index.html
datasets/libri_light/: index.html
datasets/librispeech/: index.html
datasets/libritts/: index.html
datasets/libritts_r/: index.html
datasets/ljspeech/: index.html
datasets/magicdata_ramc/: index.html
datasets/meld/: index.html
datasets/mgb2/: index.html
datasets/mls/: index.html
datasets/msp_improv/: index.html
datasets/msp_podcast/: index.html
datasets/musan/: index.html
datasets/myst/: index.html
datasets/national_speech_corpus/: index.html
datasets/opencpop/: index.html
datasets/peoples_speech/: index.html
datasets/ravdess/: index.html
datasets/reazonspeech/: index.html
datasets/seame/: index.html
datasets/shrutilipi/: index.html
datasets/slue/: index.html
datasets/spgispeech/: index.html
datasets/switchboard/: index.html
datasets/tedlium3/: index.html
datasets/thchs30/: index.html
datasets/thorsten_voice/: index.html
datasets/timit/: index.html
datasets/vctk/: index.html
datasets/voxceleb1/: index.html
datasets/voxceleb2/: index.html
datasets/voxforge/: index.html
datasets/voxlingua107/: index.html
datasets/voxpopuli/: index.html
datasets/wenetspeech/: index.html
docker/: Dockerfile
docker-build/: index.html
docker/constraints/: asr.txt  core.txt  diarize.txt  fish-speech.txt  tts.txt
docs/: architecture.md  docker-build.md  examples.md  getting-started.md  index.md  roadmap-next-phase.md
docs/architecture/: multi-env.md
docs/concepts/: data-protocol.md
docs/datasets/: aishell.md  aishell2.md  aishell3.md  aishell4.md  ami.md  avspeech.md  cnceleb.md  commonvoice.md  crema_d.md  css10.md  daps.md  dipco.md  earnings21.md  earnings22.md  emilia.md  esd.md  expresso.md  fleurs.md  gigaspeech.md  gigaspeech2.md  golos.md  hifitts.md  iemocap.md  index.md  jsut.md  kespeech.md  ksponspeech.md  libri_light.md  librispeech.md  libritts.md  libritts_r.md  ljspeech.md  magicdata_ramc.md  meld.md  mgb2.md  mls.md  msp_improv.md  msp_podcast.md  musan.md  myst.md  (+21 more)
docs/guides/: operator-plugins.md
docs/reference/: cli.md  operators.md  pipeline-yaml.md  recipes.md  schema.md  tools-api.md
docs/schemas/: pipeline.schema.json
docs/tutorials/: asr-training-data.md  data-cleaning.md  speaker-analysis.md  tts-data-prep.md  tts-speaker.md  tts-synthesis.md  tts-training-data.md  tts-voice-cloning.md
examples/: README.md  index.html
examples/demo_data/: demo1.opus
examples/pipelines/: asr-training-data.yaml  augmentation.yaml  codec-tokenize.yaml  demo-full.yaml  demo-no-asr.yaml  dir-resample-pack.yaml  emotion-recognize.yaml  fleurs-multilingual.yaml  forced-align.yaml  librispeech-asr.yaml  minimal.yaml  noise-augment.yaml  qwen3-asr.yaml  reverb-augment.yaml  speaker-analysis.yaml  speaker-embed.yaml  speech-enhance.yaml  tts-data-prep.yaml  tts-speaker-filter.yaml  tts-synthesis.yaml
examples/plugin-operator/: README.md  pyproject.toml
examples/plugin-operator/voxkitchen_example_plugin/: operator.py
examples/scripts/: verify_new_operators.py
experiments/children-asr/: analyze_multi_asr.py  compare_cer.py  demo_multi_asr.yaml  eval_paraformer.yaml  eval_qwen3.yaml  eval_sensevoice.yaml  exp_paraformer.yaml  exp_qwen3.yaml  exp_sensevoice.yaml
getting-started/: index.html
guides/operator-plugins/: index.html
reference/cli/: index.html
reference/operators/: index.html
reference/pipeline-yaml/: index.html
reference/recipes/: index.html
reference/schema/: index.html
reference/tools-api/: index.html
roadmap-next-phase/: index.html
schemas/: pipeline.schema.json
scripts/: check-ci.sh  gen_operator_docs.py  release.sh  vkit-build.sh  vkit-docker.sh  warmup_models.py
scripts/sweep/: README.md  assertions.py  image_resolver.py  last-run.md  report.py  run.py  setup_fixtures.py
search/: search_index.json
skill/: SKILL.md  openai.yaml
skill/references/: cli-reference.md  operators.md
src/voxkitchen/: tools.py
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_align_export_e2e.py  test_asr_pipeline_e2e.py  test_audio_pipeline_e2e.py  test_multi_env_dispatch_e2e.py  test_pipeline_e2e.py  test_quality_pipeline_e2e.py  test_recipe_pipeline_e2e.py
tests/unit/: conftest.py  test_cli_smoke.py  test_operators_doc.py  test_tools.py
tutorials/asr-training-data/: index.html
tutorials/data-cleaning/: index.html
tutorials/speaker-analysis/: index.html
tutorials/tts-data-prep/: index.html
tutorials/tts-speaker/: index.html
tutorials/tts-synthesis/: index.html
voxkitchen/: __init__.py  __main__.py  tools.py
(+464 files in other folders)
