[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "voxkitchen"
dynamic = ["version"]
description = "A researcher-friendly, declarative speech data processing toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "VoxKitchen contributors" }]
keywords = ["speech", "audio", "dataset", "pipeline", "asr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Sound/Audio",
]

# Core deps: schema + CLI + audio processing utilities.
# Heavy deps (torch) are in the [audio] extras group.
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "soundfile>=0.12",
    "tqdm>=4.66",
    "numpy>=1.24,<2.0",
    "ffmpeg-python>=0.2",
    "pyloudnorm>=0.1",
]

[project.optional-dependencies]
audio = ["torch>=2.1", "torchaudio>=2.1"]
segment = ["webrtcvad>=2.0", "librosa>=0.10", "torchaudio>=2.1"]
quality = ["simhash>=2.1"]
pack = ["datasets>=2.16", "webdataset>=0.2", "pyarrow>=14"]
asr = ["faster-whisper>=1.0"]
whisper = ["openai-whisper>=20231117"]
pitch = ["pyworld>=0.3"]
dnsmos = ["speechmos>=0.0.1"]
funasr = ["funasr>=1.0"]
wenet = ["wenet>=2.0"]
diarize = ["pyannote.audio>=3.1,<4.0", "huggingface_hub<0.25"]  # pyannote 4.0 requires torch>=2.8
classify = ["speechbrain>=1.0"]
gender = ["inaSpeechSegmenter>=0.2"]
speaker = ["wespeaker @ git+https://github.com/wenet-e2e/wespeaker.git"]
enhance = ["deepfilternet>=0.5"]
align = ["qwen-asr>=0.0.6"]
viz = ["jinja2>=3.1", "plotly>=5.18"]
viz-panel = ["gradio>=4.12"]
all = [
    "voxkitchen[audio,segment,quality,pack,asr,whisper,pitch,dnsmos,diarize,classify,gender,speaker,enhance,viz,viz-panel]",
]
dev = [
    "voxkitchen[all]",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "scipy>=1.11",
]

[project.scripts]
vkit = "voxkitchen.cli.main:app"

[project.urls]
Repository = "https://github.com/voxkitchen/voxkitchen"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
raw-options = { fallback_version = "0.0.0.dev0", tag_regex = "^(?:v)?(?P<version>[0-9]+(?:\\.[0-9]+)+)$" }

[tool.hatch.build.targets.wheel]
packages = ["src/voxkitchen"]

[tool.hatch.build.hooks.vcs]
version-file = "src/voxkitchen/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["src/voxkitchen/_version.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false  # optional deps may or may not be installed
files = ["src/voxkitchen", "tests"]

[[tool.mypy.overrides]]
module = ["soundfile.*", "yaml.*", "ffmpeg.*", "pyloudnorm.*", "torch.*", "torchaudio.*", "scipy.*", "librosa.*", "webrtcvad.*", "simhash.*", "datasets.*", "webdataset.*", "pyarrow.*", "faster_whisper.*", "pyannote.*", "speechbrain.*", "whisperx.*", "jinja2.*", "plotly.*", "gradio.*", "funasr.*", "wenet.*", "inaSpeechSegmenter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voxkitchen.pipeline.context does not exist until Plan 2 Task 3;
# operators/ must not depend on pipeline/ at import time (TYPE_CHECKING only).
module = ["voxkitchen.pipeline.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that download ML models (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU or special server config (deselect with '-m \"not gpu\"')",
]
