[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "voxkitchen"
dynamic = ["version"]
description = "A researcher-friendly, declarative speech data processing toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "VoxKitchen contributors" }]
keywords = [
    "speech",
    "audio",
    "dataset",
    "pipeline",
    "asr",
    "tts",
    "vad",
    "diarization",
    "voice",
    "speaker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Sound/Audio",
]

# Core deps: schema + CLI + audio processing utilities.
# Optional dependency groups below are for Docker image builds and developer
# installs; the supported user execution path is `vkit docker ...`.
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "soundfile>=0.12",
    "tqdm>=4.66",
    # Upper bound intentionally absent: the fish-speech env runs on numpy
    # >=2.1 (fish-speech upstream pins torch 2.8 which brings numpy 2.x).
    # The core / asr / tts envs each pin numpy<2.0 via
    # docker/constraints/*.txt so they stay on the validated 1.x stack.
    "numpy>=1.24",
    "ffmpeg-python>=0.2",
    "pyloudnorm>=0.1",
    # Needed by the parent env's `vkit validate` to check operator args
    # against op_schemas.json when the operator class itself lives in
    # another env and cannot be imported here.
    "jsonschema>=4.17",
]

[project.optional-dependencies]
audio = ["torch>=2.1", "torchaudio>=2.1"]
segment = ["webrtcvad>=2.0", "librosa>=0.10", "torchaudio>=2.1"]
quality = ["simhash>=2.1"]
pack = ["datasets>=2.16", "webdataset>=0.2", "pyarrow>=14"]
asr = ["faster-whisper>=1.0"]
whisper = ["openai-whisper>=20231117"]
pitch = [
    "pyworld>=0.3",
    # pyworld imports pkg_resources at import time; setuptools 81+ removed it.
    "setuptools<81",
]
dnsmos = [
    "speechmos>=0.0.1",
    # speechmos's own wheel declares no dependencies, but dnsmos.run()
    # imports onnxruntime internally. Add it here so the dependency group is
    # actually usable. Tested with onnxruntime 1.17+.
    "onnxruntime>=1.17,<2",
]
funasr = ["funasr>=1.0"]
# `wenet`, `speaker` (wespeaker), and `tts-fish-speech` (fish-speech) are
# installed from git inside the Docker images via dedicated RUN lines in
# `docker/Dockerfile`. They are intentionally NOT declared here as optional
# dependencies because PyPI refuses to accept distributions whose metadata
# contains PEP 440 "direct references" (`pkg @ git+https://...`). Removing
# them from pyproject keeps the published wheel uploadable while leaving the
# Docker-only install path unchanged.
diarize = ["pyannote.audio>=3.1,<4.0"]  # pyannote 4.0 requires torch>=2.8
classify = ["speechbrain>=1.0"]
gender = ["inaSpeechSegmenter>=0.2"]
enhance = ["deepfilternet>=0.5"]
align = ["qwen-asr>=0.0.6"]
codec = ["encodec>=0.1", "descript-audio-codec>=1.0"]
tts-kokoro = ["kokoro>=0.7", "soundfile>=0.12", "misaki[zh,ja,ko,vi]>=0.5"]
tts-chattts = ["ChatTTS>=0.2"]
tts-cosyvoice = ["modelscope>=1.0"]
viz = ["jinja2>=3.1", "plotly>=5.18"]
viz-panel = ["gradio>=4.12"]
# Test tooling + the core-cluster dependency groups CI installs. This is the
# single-cluster subset that resolves cleanly; for ASR/TTS/diarize
# development, add the relevant cluster groups on top of [dev].
dev = [
    "voxkitchen[audio,segment,quality,pack,pitch,dnsmos,classify,enhance,viz]",
    # numba (pulled in by librosa via the segment extra) supports numpy<=2.2.
    # Cap it here so a fresh `pip install -e .[dev]` stays importable. The core
    # numpy>=1.24 dependency intentionally keeps no upper bound for the
    # fish-speech runtime, which is not part of this dev cluster.
    "numpy<2.3",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "scipy>=1.11",
]

[project.scripts]
vkit = "voxkitchen.cli.main:app"

[project.urls]
Homepage = "https://github.com/XqFeng-Josie/VoxKitchen"
Documentation = "https://voxkitchen.readthedocs.io"
Repository = "https://github.com/XqFeng-Josie/VoxKitchen"
Issues = "https://github.com/XqFeng-Josie/VoxKitchen/issues"
Changelog = "https://github.com/XqFeng-Josie/VoxKitchen/blob/main/CHANGELOG.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
# `local_scheme = "no-local-version"` strips the `+g<sha>` local segment from
# setuptools-scm-derived versions. PyPI / TestPyPI reject any release whose
# version carries a PEP 440 local identifier — without this, dev builds
# produced by the publish workflow's manual TestPyPI dispatch (e.g.
# `0.2.1.dev5+g4625abbcb`) fail upload with HTTP 400. Tag-triggered builds
# already produce clean versions like `0.3.0` and were never affected.
raw-options = { fallback_version = "0.0.0.dev0", local_scheme = "no-local-version", tag_regex = "^(?:v)?(?P<version>[0-9]+(?:\\.[0-9]+)+)$" }

[tool.hatch.build.targets.wheel]
packages = ["voxkitchen"]

# Non-Python files inside the package (templates, report.html.j2) are picked
# up automatically by hatchling — no force-include needed. Adding one for
# `voxkitchen/templates/pipelines` caused the .yaml files to appear twice in
# the wheel and produced "Duplicate name" warnings at build time.

[tool.hatch.build.hooks.vcs]
version-file = "voxkitchen/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["voxkitchen", "tests"]
extend-exclude = ["voxkitchen/_version.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    "E501",
    "RUF012",  # mutable class defaults — intentional pattern for download_urls/required_extras
    "RUF059",  # unused unpack variable — `audio, sr = load_audio(...)` pattern
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false  # optional deps may or may not be installed
files = ["voxkitchen", "tests"]

[[tool.mypy.overrides]]
module = ["soundfile.*", "yaml.*", "ffmpeg.*", "pyloudnorm.*", "torch.*", "torchaudio.*", "scipy.*", "librosa.*", "webrtcvad.*", "simhash.*", "datasets.*", "webdataset.*", "pyarrow.*", "faster_whisper.*", "pyannote.*", "speechbrain.*", "whisperx.*", "jinja2.*", "plotly.*", "gradio.*", "funasr.*", "wenet.*", "inaSpeechSegmenter.*", "wespeaker.*", "qwen_asr.*", "df.*", "ctc_forced_aligner.*", "tqdm.*", "encodec.*", "dac.*", "kokoro.*", "ChatTTS.*", "cosyvoice.*", "modelscope.*", "fish_speech.*", "huggingface_hub.*", "speechmos.*", "pyworld.*", "whisper.*", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voxkitchen.pipeline.context does not exist until Plan 2 Task 3;
# operators/ must not depend on pipeline/ at import time (TYPE_CHECKING only).
module = ["voxkitchen.pipeline.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that download ML models (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU or special server config (deselect with '-m \"not gpu\"')",
]
